--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ jobs:
     working_directory: ~/nglab
     docker:
       - image: circleci/node:10-browsers
+        env:
+          - CHROME_BIN=/usr/bin/google-chrome
     steps:
       - checkout
       - restore_cache:
